@@ -1,3 +1,8 @@
+2003-01-24  Jan D.  <jan.h.d@swipnet.se>
+
+	* gtkutil.c (xg_initialize): Initialize id_to_widget here instead
+	of static initializer.
+
 2003-01-24  Dave Love  <fx@gnu.org>
 
 	* s/gnu-linux.h (GC_SETJMP_WORKS, GC_MARK_STACK): Define for more
